--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "Peng Wang/Personal Homepage" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
-title                    : "Your Name / Site Title"
+site_theme               : "Personal Homepage" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
+title                    : "Peng Wang / Personal Homepage"
 title_separator          : "-"
 name                     : &name "Peng Wang"
 description              : &description "A first-year doctoral student from Hohai University"   # Update this with a general description of your site, this is the default if not overridden by a page
@@ -28,14 +28,14 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "The harder you work, the luckier you become."
   location         : "Nanjing, China"
-  employer         : "Red Brick University"
+  employer         : "Hohai University"
   uri              : # URL
   email            : "pengw0116@hhu.edu.cn" 
 
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   inspire-hep      : # URL
   impactstory      : # URL
   orcid            : "https://orcid.org/yourorcidurl"
@@ -51,13 +51,13 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : #"academicpages"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
   artstation       : # Username
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : #"bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
