--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "Personal Homepage" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
+site_theme               : "Personal-Homepage" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
 title                    : "Peng Wang / Personal Homepage"
 title_separator          : "-"
 name                     : &name "Peng Wang"
